# gnome-shell-extension-github-notifications

./: .gitignore  .pnpmfile.cjs  Cargo.toml  README.md  global.d.ts  justfile  package.json  pnpm-lock.yaml  tsconfig.json  upx.bash
assets/: metadata.json
assets/schemas/: org.gnome.shell.extensions.github.notifications.gschema.xml
patches/: @girs__gnome-shell@45.0.0-beta9.patch  @girs__gnome-shell@46.0.0.patch  @girs__gnome-shell@47.0.0.patch
rust-bin/: bindings.rs  main.rs
rust-lib/: app.rs  bindings.rs  cli.rs  input.rs  lib.rs  output.rs
src/: bindings.rs  buildUri.ts  cli.rs  extension.ts  input.rs  lib.rs  log.ts  main.rs  metadata.json  prefs.ts
typescript/: extension.ts  prefs.ts
typescript/bindings/: types.ts
