[package]
name = "gnome-shell-extension-github-notifications"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "gnome-shell-extension-github-notifications"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ts-rs = "7.1.1"
