[package]
name = "gnome-shell-extension-github-notifications"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "gnome_shell_extension_github_notifications"
path = "rust-lib/lib.rs"

[[bin]]
name = "gnome-shell-extension-github-notifications"
path = "rust-bin/main.rs"

[[bin]]
name = "generate-typescript-definitions"
path = "rust-bin/bindings.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
derive_more = { version = "1.0.0-beta.6", features = ["display"] }
pipe-trait = "0.4.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
typescript-type-def = { version = "0.5.11", features = ["json_value"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
